2007-03-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/comp: Renamed `src/comp' to `src/compat'.

	* src/exmpp_factory.erl: Move to `src/core'; some code still needs to
	be moved in appropriate modules in `src/server' or `src/client'.

2007-03-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl: Restore DRIVER_NAME value. Style.
	(get_cdata): Changed return value of the new function clause to the
	`false', like related functions.

2007-03-06  Christophe Romain  <christophe.romain@process-one.net>

	* src/exmpp_factory.erl: Add functions to delete a pubsub node.

	* src/*.erl: Reorganize source files in separate subdirectories.

2007-03-05  Mickaël Rémond  <mickael.remond@process-one.net>

	* src/exmpp_xml.erl (get_cdata): Handle a false value. This clause
	make it possible to write code like:
	exmpp_xml:get_cdata(exmpp_xml:get_element_by_name(XML_El, body))

2007-03-04  Mickaël Rémond  <mickael.remond@process-one.net>

	* src/exmpp_xml.erl: Added get_element_by_ns/2. This function is
	useful to extract XMPP error codes (to make sure you are getting the
	correct tag).

2007-03-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Remove checks for `kernel' and `stdlib' Erlang
	applications. They're not used at build time.

	* testsuite/test.sh: Fixed IFS variable because the TESTS variable
	contains Tab characters.

	* c_src/expat_drv.c, c_src/exmpp_expat_drv.c, c_src/Makefile.am,
	src/exmpp_xml.erl: Renamed Expat port driver to have the `exmpp_'
	prefix.

2007-03-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_internals.erl (driver_dirs): Revised port drivers search
	path. This allows us to remove priv/lib/Makefile hack needed to run
	the package testsuite.

	* src/exmpp_xml.erl: Use exmpp_internals to load/unload its port
	driver.

	* configure.ac, Makefile.am: Disconnect priv directory from the build,
	prior to its removal.
