@@ -6,17 +6,21 @@
     {id, "$Id$"},
     {modules, [
         exmpp,
+        exmpp_sup,
+        exmpp_internals,
+        exmpp_xml,
+        exmpp_xmlstream,
+        exmpp_jid,
         exmpp_factory,
         exmpp_jlib,
-        exmpp_xml,
-        exmpp_xmlstream@COMPAT_MODULES_START@
-	@COMPAT_MODULES@ejabberd_zlib,
-	@COMPAT_MODULES@iconv,
-	@COMPAT_MODULES@jlib,
-	@COMPAT_MODULES@sha,
-	@COMPAT_MODULES@stringprep,
-	@COMPAT_MODULES@tls,
-	@COMPAT_MODULES@xml
+        exmpp_client_pubsub@COMPAT_MODULES_START@
+        @COMPAT_MODULES@ejabberd_zlib,
+        @COMPAT_MODULES@iconv,
+        @COMPAT_MODULES@jlib,
+        @COMPAT_MODULES@sha,
+        @COMPAT_MODULES@stringprep,
+        @COMPAT_MODULES@tls,
+        @COMPAT_MODULES@xml
     ]},
     {registered, []},
     {applications, [
